<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Molu</string>
    <string name="mol_text_view">Mol:</string>
    <string name="mass_text_view">Mass in u:</string>
    <string name="edit_text_1">Element</string>
    <string name="gram_text_view">Mass in g:</string>
    <string name="calculate_button">Calculate</string>
    <string name="no_element_given_dialog_fragment_message">Type your element in the \'element\' box</string>
    <string name="no_element_given_dialog_fragment_title">No Element</string>
    <string name="not_an_element_dialog_fragment_message">This is not an element</string>
    <string name="not_an_element_dialog_fragment_title">Error</string>
    <string name="ok_positive_button_dialog">OK</string>
    <string name="too_many_arguments_title">Error</string>
    <string name="too_many_arguments_message">Fill only one of the unit boxes</string>
    <string name="element_action_bar_string_title">Elements</string>


    <!-- All Elements -->
    <string name="hydrogen">Hydrogen</string>
    <string name="helium">Helium</string>
    <string name="lithium">Lithium</string>
    <string name="beryllium">Beryllium</string>
    <string name="boron">Boron</string>
    <string name="carbon">Carbon</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="oxygen">Oxygen</string>
    <string name="fluorine">Fluorine</string>
    <string name="neon">Neon</string>
    <string name="sodium">Sodium</string>
    <string name="magnesium">Magnesium</string>
    <string name="aluminum">Aluminum</string>
    <string name="silicon">Silicon</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="sulfur">Sulfur</string>
    <string name="chlorine">Chlorine</string>
    <string name="argon">Argon</string>
    <string name="potassium">Potassium</string>
    <string name="calcium">Calcium</string>
    <string name="scandium">Scandium</string>
    <string name="titanium">Titanium</string>
    <string name="vanadium">Vanadium</string>
    <string name="chromium">Chromium</string>
    <string name="manganese">Manganese</string>
    <string name="iron">Iron</string>
    <string name="cobalt">Cobalt</string>
    <string name="nickel">Nickel</string>
    <string name="copper">Copper</string>
    <string name="zinc">Zinc</string>
    <string name="gallium">Gallium</string>
    <string name="germanium">Germanium</string>
    <string name="arsenic">Arsenic</string>
    <string name="selenium">Selenium</string>
    <string name="bromine">Bromine</string>
    <string name="krypton">Krypton</string>
    <string name="rubidium">Rubidium</string>
    <string name="strontium">Strontium</string>
    <string name="yttrium">Yttrium</string>
    <string name="zirconium">Zirconium</string>
    <string name="niobium">Niobium</string>
    <string name="molybdenum">Molybdenum</string>
    <string name="technetium">Technetium</string>
    <string name="ruthenium">Ruthenium</string>
    <string name="rhodium">Rhodium</string>
    <string name="palladium">Palladium</string>
    <string name="silver">Silver</string>
    <string name="cadmium">Cadmium</string>
    <string name="indium">Indium</string>
    <string name="tin">Tin</string>
    <string name="antimony">Antimony</string>
    <string name="tellurium">Tellurium</string>
    <string name="iodine">Iodine</string>
    <string name="xenon">Xenon</string>
    <string name="cesium">Cesium</string>
    <string name="barium">Barium</string>
    <string name="lanthanum">Lanthanum</string>
    <string name="cerium">Cerium</string>
    <string name="praseodymium">Praseodymium</string>
    <string name="neodymium">Neodymium</string>
    <string name="promethium">Promethium</string>
    <string name="samarium">Samarium</string>
    <string name="europium">Europium</string>
    <string name="gadolinium">Gadolinium</string>
    <string name="terbium">Terbium</string>
    <string name="dysprosium">Dysprosium</string>
    <string name="holmium">Holmium</string>
    <string name="erbium">Erbium</string>
    <string name="thulium">Thulium</string>
    <string name="ytterbium">Ytterbium</string>
    <string name="lutetium">Lutetium</string>
    <string name="hafnium">Hafnium</string>
    <string name="tantalum">Tantalum</string>
    <string name="tungsten">Tungsten</string>
    <string name="rhenium">Rhenium</string>
    <string name="osmium">Osmium</string>
    <string name="iridium">Iridium</string>
    <string name="platinum">Platinum</string>
    <string name="gold">Gold</string>
    <string name="mercury">Mercury</string>
    <string name="thallium">Thallium</string>
    <string name="lead">Lead</string>
    <string name="bismuth">Bismuth</string>
    <string name="polonium">Polonium</string>
    <string name="astatine">Astatine</string>
    <string name="radon">Radon</string>
    <string name="francium">Francium</string>
    <string name="radium">Radium</string>
    <string name="actinium">Actinium</string>
    <string name="thorium">Thorium</string>
    <string name="protactinium">Protactinium</string>
    <string name="uranium">Uranium</string>
    <string name="neptunium">Neptunium</string>
    <string name="plutonium">Plutonium</string>
    <string name="americium">Americium</string>
    <string name="curium">Curium</string>
    <string name="berkelium">Berkelium</string>
    <string name="californium">Californium</string>
    <string name="einsteinium">Einsteinium</string>
    <string name="fermium">Fermium</string>
    <string name="mendelevium">Mendelevium</string>
    <string name="nobelium">Nobelium</string>
    <string name="lawrencium">Lawrencium</string>
    <string name="rutherfordium">Rutherfordium</string>
    <string name="dubnium">Dubnium</string>
    <string name="seaborgium">Seaborgium</string>
    <string name="bohrium">Bohrium</string>
    <string name="hassium">Hassium</string>
    <string name="meitnerium">Meitnerium</string>
    <string name="darmstadtium">Darmstadtium</string>
    <string name="roentgenium">Roentgenium</string>
    <string name="copernicium">Copernicium</string>
    <string name="ununtrium">Ununtrium</string>
    <string name="flerovium">Flerovium</string>
    <string name="ununpentium">Ununpentium</string>
    <string name="livermorium">Livermorium</string>
    <string name="ununseptium">Ununseptium</string>
    <string name="ununoctium">Ununoctium</string>


    <string name="Element_info_activity_label">Elements</string>
    <string name="particles_text_view">Particles:</string>
    <string name="invalid_number_dialog_title">Invalid number</string>
    <string name="invalid_number_dialog_message">Please enter a valid number</string>
    <string name="fragment_element_atomic_mass">Atomic Mass:</string>
    <string name="fragment_element_abbreviation">Abbreviation:</string>
    <string name="fragment_element_atomic_number">Atomic Number:</string>
    <string name="action_bar_pager_show_list">List</string>
    <string name="try_the_new_user_interface">Try the new User Interface!</string>
    <string name="year_of_disc_unknown">Unknown</string>
    <string name="before_christ">B.C.</string>
    <string name="year_of_discovery_text">Year of Discovery:</string>

</resources>