<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_1"
        android:hint="@string/edit_text_1"
        android:inputType="textCapWords"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/edit_text_1"
        android:id="@+id/mol_layout"
        android:gravity="bottom">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/mol_text_view"
            android:id="@+id/mol_text_view"
            style="@style/text_view_style"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:id="@+id/mol_edit_text"
            style="@style/number_edit_style"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/mol_layout"
        android:id="@+id/mass_layout"
        android:orientation="horizontal"
        android:gravity="bottom">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/mass_text_view"
            android:id="@+id/mass_text_view"
            style="@style/text_view_style"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/mass__amount_text_view"
            style="@style/number_edit_style"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/mass_layout"
        android:orientation="horizontal"
        android:id="@+id/gram_layout"
        android:gravity="bottom">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/gram_text_view"
            android:id="@+id/gram_text_view"
            style="@style/text_view_style"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:id="@+id/gram_edit_text"
            style="@style/number_edit_style"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/gram_layout"
        android:orientation="horizontal"
        android:id="@+id/particles_layout"
        android:gravity="bottom">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/particles_text_view"
            android:id="@+id/particles_text_view"
            style="@style/text_view_style"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:id="@+id/particles_edit_text"
            style="@style/number_edit_style"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calculate_button"
        android:text="@string/calculate_button"
        android:layout_below="@id/particles_layout"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:onClick="onClickCalculate"/>





</RelativeLayout>
