<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:id="@+id/fragment_element_table_layout">

        <TableRow>

            <TextView
                android:text="@string/fragment_element_abbreviation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/fragment_element_abbreviation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"/>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/fragment_element_atomic_mass"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/fragment_element_atomic_mass"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"/>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/year_of_discovery_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/fragment_element_year_of_disc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/fragment_element_atomic_number"
        android:textSize="50sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/blue_text"/>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_element_table_layout"
        android:id="@+id/fragment_element_container"
        android:name="com.teinproductions.tein.molu.CalculateFragment"
        tools:layout="@layout/calculate_fragment">

    </fragment>


</RelativeLayout>